--- a/dolphinscheduler-ui/src/js/conf/home/pages/dag/_source/dag.scss
+++ b/dolphinscheduler-ui/src/js/conf/home/pages/dag/_source/dag.scss
@@ -83,6 +83,9 @@
   .icos-SQL {
     background: url("../img/toolbar_SQL.png") no-repeat 50% 50%;
   }
+  .icos-WAIT_SQL {
+      background: url("../img/toolbar_WAIT_SQL.png") no-repeat 50% 50%;
+    }
   .icos-SPARK {
     background: url("../img/toolbar_SPARK.png") no-repeat 50% 50%;
   }
